--- a/bonus/index.html
+++ b/bonus/index.html
@@ -32,7 +32,7 @@
         class="mt-5 container rounded-5 d-flex justify-content-center align-items-center flex-column py-3"
       >
         <h2>Email List</h2>
-        <div>
+        <div class="email_container">
           <ul id="email_list" class="text-center"></ul>
         </div>
         <div>
